# logistics-app

./: README.md
backend/: .env  .env.template  .gitignore  README.md  delete.sql  docker-compose.yml  init.sql  main.py  pyproject.toml  test.py
backend/app/: config.py  database.py  enums.py  exceptions.py  logging_config.py  main.py
backend/app/dao/: base.py
backend/app/database/: __init__.py  base.py  core.py  types.py
backend/app/migration/: env.py
backend/app/migration/versions/: c28cae18ca61_add_unique_constraint_on_vehicle_id_and_.py  f8a2464c1ce2_initial_revision_added_models_orders_.py
backend/app/models/: __init__.py
backend/app/orders/: dao.py  models.py  rb.py  router.py  schemas.py
backend/app/trip_sheets/: dao.py  models.py  rb.py  router.py  schemas.py
backend/app/users/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py
backend/app/vehicles/: dao.py  models.py  rb.py  router.py  schemas.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/api/: auth.ts  orders.ts  tripsheets.ts  vehicles.ts
frontend/src/assets/: main.css
frontend/src/components/: LoadingSpinner.vue  OrderCard.vue  OrderList.vue  TripSheetWidget.vue  TripsheetsList.vue  UserManagement.vue  VehicleCard.vue  VehiclesList.vue
frontend/src/pages/: AdminPanel.vue  LoginPage.vue  OrderDetailPage.vue  OrdersPage.vue  VehicleDetailPage.vue  VehiclesPage.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
